--- a/index.html
+++ b/index.html
@@ -5,7 +5,39 @@ title: Hunt's blog
 
 <p>recent posts:</p>
 <ul>
-    {% for post in site.posts limit:10 %}
+    {% for post in paginator.posts %}
     <li> {{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
 </ul>
+
+<div id="post-pagination" class="pagination">
+    {% if paginator.previous_page %}
+        {% if paginator.previous_page == 1 %}
+    <a href="/">&lt;&lt;</a>
+        {% else %}
+    <a href="{{ paginator.previous_page_path }}">&lt;&lt;</a>
+        {% endif %}
+    {% else %}
+    <span>&lt;&lt;</span>
+    {% endif %}
+
+    {% if paginator.page == 1 %}
+    <span class="current-page">1</span>
+    {% else %}
+    <a href="/">1</a>
+    {% endif %}
+
+    {% for count in (2..paginator.total_pages) %}
+        {% if count == paginator.page %}
+    <span class="current-page">{{ count }}</span>
+        {% else %}
+    <a href="/page{{ count }}">{{ count }}</a>
+        {% endif %}
+    {% endfor %}
+
+    {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path }}">&gt;&gt;</a>
+    {% else %}
+    <span>&gt;&gt;</span>
+    {% endif %}
+</div>
